# mpc

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  API.md  ARCHITECTURE.md  ARCHITECTURE.org  CHANGELOG.md  CHECKPOINT_IMPLEMENTATION.md  CHECKPOINT_REFACTOR_SUMMARY.md  CHECKPOINT_VOTING_ARCHITECTURE.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.multichain  IMPLEMENTATION_SUMMARY.md  Justfile  Makefile.toml  Papers.bib  README.md  REFACTOR_INTEGRATION_EXAMPLE.rs  ROADMAP.md  SCALING_AND_SECURITY.md  bench.sh  build-contract.sh  build.sh  flake.nix  mpc_contract-1.0.0.wasm  mpc_contract-1.1.1.wasm  setup.sh  sign_output.txt
bench/: Cargo.toml  run.sh
benches/: Cargo.toml  bench_endpoints.rs
chain-signatures/: Cargo.toml  README.md
chain-signatures/contract/: Cargo.toml  EXAMPLE.md
chain-signatures/contract-eth/: README.md  hardhat.config.js  package-lock.json  package.json
chain-signatures/contract-eth/.openzeppelin/: sepolia.json
chain-signatures/contract-eth/contracts/: ChainSignatures.sol  ChainSignaturesProxy.sol  ChainSignaturesProxyAdmin.sol  ChainSignaturesUpgradeable.sol  Secp256k1.sol
chain-signatures/contract-eth/deployments/: sepolia.json
chain-signatures/contract-eth/ignition/: params.json
chain-signatures/contract-eth/scripts/: c.js  convertPk.js  d.js  deploy.js  e.js  f.js  findAddress.js  getPublicKey.js  initialDeploy.js  populateParams.js  requestSign.js  respond.js  responder.js  sign.js  upgradeContract.js  watch-events.js
chain-signatures/contract-eth/test/: ChainSignatures.test.js
chain-signatures/contract-eth/utils/: utils.js
chain-signatures/contract-sol/: Anchor.toml  Cargo.toml  README.md
chain-signatures/contract-sol/src/: lib.rs
chain-signatures/contract/.cargo/: config.toml
chain-signatures/contract/src/: checkpoint.rs  errors.rs  lib.rs  migrate.rs  primitives.rs  update.rs
chain-signatures/contract/tests/: common.rs  sign.rs  tests.rs  updates.rs  user_views.rs  vote.rs
chain-signatures/crypto/: Cargo.toml
chain-signatures/crypto-shared/: Cargo.toml
chain-signatures/crypto-shared/src/: kdf.rs  types.rs
chain-signatures/crypto/src/: kdf.rs  lib.rs  types.rs
chain-signatures/forge/: Cargo.toml
chain-signatures/forge/src/: lib.rs
chain-signatures/keys/: Cargo.toml
chain-signatures/keys/src/: hpke.rs  hpke_wasm.rs  lib.rs
chain-signatures/node/: Cargo.toml  redis.conf
chain-signatures/node/src/: checkpoint.rs  checkpoint_test.rs  cli.rs  config.rs  contract_updater.rs  http_client.rs  indexer.rs  indexer_eth.rs  indexer_sol.rs  kdf.rs  lib.rs  logs.rs  main.rs  metrics.rs  node_client.rs  pending_requests.rs  read_respond.rs  rpc.rs  rpc_client.rs  sign_queue.rs  sign_respond_tx.rs  signature_queue.rs  test_utils.rs  types.rs  util.rs
chain-signatures/primitives/: Cargo.toml
chain-signatures/primitives/src/: bytes.rs  candidate.rs  lib.rs  participant.rs
chain-signatures/sign-queue/: Cargo.toml
chain-signatures/sign-queue/src/: lib.rs
chain-signatures/store/: Cargo.toml
chain-signatures/test-contracts/: Cargo.toml
contract/: Cargo.toml
contract/src/: kdf.rs  lib.rs  primitives.rs
contract/tests/: tests.rs
crypto-shared/: Cargo.toml
crypto-shared/src/: types.rs
infra/scripts/generate_admin_address/: Cargo.toml
integration-tests/: Cargo.toml  README.md  build.rs
integration-tests/.cargo/: config.toml
integration-tests/benches/: sign.rs  store.rs
integration-tests/chain-signatures/: Cargo.toml  build.rs  out.txt
integration-tests/chain-signatures/src/: commands.rs  containers.rs  execute.rs  lib.rs  local.rs  main.rs  state.rs  types.rs  utils.rs
integration-tests/chain-signatures/tests/: lib.rs
integration-tests/fastauth/: Cargo.toml
integration-tests/fastauth/src/: sandbox.rs  util.rs
integration-tests/forge/: Cargo.toml
integration-tests/forge/src/: lib.rs
integration-tests/resources/redis-100t-100p/: dump.rdb
integration-tests/src/: commands.rs  containers.rs  execute.rs  indexer.rs  lib.rs  local.rs  main.rs  mpc.rs  sandbox.rs  util.rs  utils.rs
integration-tests/src/actions/: mod.rs  sign.rs  wait.rs  wait_for.rs
integration-tests/src/cluster/: mod.rs  spawner.rs
integration-tests/src/env/: containers.rs  local.rs  mod.rs
integration-tests/src/mpc/: 3_nodes.json  5_nodes.json  fixture_input.rs
integration-tests/src/mpc_fixture/: 3_nodes.json  5_nodes.json  builder.rs  fixture_interface.rs  fixture_tasks.rs  input.rs  mock_governance.rs  mock_indexers.rs  mod.rs
integration-tests/src/multichain/: containers.rs  local.rs  mod.rs  utils.rs
integration-tests/tests/: lib.rs  test-oauth.rs
integration-tests/tests/actions/: mod.rs  sign.rs  wait.rs  wait_for.rs
integration-tests/tests/cases/: logs.dev.nodes5.nostock.txt  mod.rs  mpc.rs  nightly.rs  store.rs  sync.rs
integration-tests/tests/cluster/: mod.rs  spawner.rs
integration-tests/tests/docker/: datastore.rs  mod.rs  redis.rs  relayer.rs
integration-tests/tests/mpc/: mod.rs  negative.rs  positive.rs
integration-tests/tests/multichain/: mod.rs
load-tests/: .gitignore  Cargo.toml  README.md
load-tests/src/: constants.rs  main.rs  primitives.rs  utils.rs
load-tests/src/common/: mod.rs  primitives.rs
load-tests/src/fastauth/: mod.rs  primitives.rs  utils.rs
load-tests/src/multichain/: mod.rs
load-tests/test_plans/: short.txt
mpc-recovery/: Cargo.toml
mpc-recovery/src/: actor.rs  client.rs  error.rs  key_recovery.rs  lib.rs  logging.rs  main.rs  metrics.rs  msg.rs  nar.rs  oauth.rs  ouath.rs  primitives.rs  transaction.rs  utils.rs  web.rs
mpc-recovery/src/firewall/: allowed.rs  mod.rs
mpc-recovery/src/gcp/: auth.rs  error.rs  mod.rs  value.rs
mpc-recovery/src/leader_node/: mod.rs
mpc-recovery/src/relayer/: error.rs  mod.rs  msg.rs
mpc-recovery/src/sign_node/: aggregate_signer.rs  mod.rs  (+6 more)
mpc-recovery/tests/: test-oauth.rs
node/: Cargo.toml
node/src/: cli.rs  http_client.rs  indexer.rs  kdf.rs  lib.rs  metrics.rs  rpc_client.rs  storage.rs  test_utils.rs  types.rs  util.rs
scripts/: LICENSE  scripts.cabal
scripts/app/: Main.hs
(+244 files in other folders)
