[package]
name = "mpc-recovery"
version = "0.1.0"
edition = "2021"

# We have encountered issue with linking GMP on ARM macos machines. This is a temporary fix that
# replaces GMP implementation with num-bigint.
[target.'cfg(macos)'.dependencies]
curv = { package = "curv-kzen", version = "0.9", default-features = false, features = ["num-bigint"] }
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git", default-features = false }

[target.'cfg(unix)'.dependencies]
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git" }

[dependencies]
