[workspace]
members = [
    "chain-signatures/crypto",
    "chain-signatures/contract",
    "chain-signatures/keys",
    "chain-signatures/node",
    "chain-signatures/primitives",
    "chain-signatures/sign-queue",

    "integration-tests",
]
resolver = "2"

[workspace.package]
version = "1.1.4"

[workspace.dependencies]
alloy = { version = "0.9.1", features = ["contract", "json"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
borsh = "1.5.3"
cait-sith = { git = "https://github.com/sig-net/cait-sith", rev = "9f34e8c", features = ["k256"] }
ciborium = "0.2.2"
clap = { version = "4.5.4", features = ["derive", "env"] }
deadpool-redis = "0.18.0"
hex = "0.4.3"
hyper = { version = "0.14", features = ["full"] }
k256 = { version = "0.13.1", features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1"
sha3 = "0.10.8"
thiserror = "1"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "env-filter",
    "registry",
    "std",
    "fmt",
] }
url = { version = "2.4.0", features = ["serde"] }
web3 = "0.19.0"
anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang = "0.31.0"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.6"

near-account-id = "1.0.0"
near-primitives = "0.26.0"
near-sdk = { version = "5.6.0", features = ["unit-testing", "unstable"] }

mpc-contract = { path = "./chain-signatures/contract" }
mpc-crypto = { path = "./chain-signatures/crypto" }
mpc-keys = { path = "./chain-signatures/keys" }
mpc-node = { path = "./chain-signatures/node" }
mpc-primitives = { path = "./chain-signatures/primitives" }
mpc-sign-queue = { path = "./chain-signatures/sign-queue" }
signet-program = { path = "./chain-signatures/contract-sol/programs/signet-program" }

[patch.crates-io]
# TODO: trigger Cargo.lock update for x25519-dalek once they release.
# This fixes https://rustsec.org/advisories/RUSTSEC-2024-0344 by pointing to a commit that includes the fix.
# This fix has yet to be propagated to crates.io so we will patch it instead.
x25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "5b7082bbc8e0b2106ab0d956064f61fa0f393cdc" }
