[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[dependencies]
criterion = "0.5.1"
integration-tests = { path = "../integration-tests" }
tokio = { version = "1.28", features = ["full"] }


[dev-dependencies]
test-log = { version = "0.2.12", features = ["log", "trace"] }


[[bench]]
name = "sign"
path = "sign.rs"
harness = false
