[workspace]
members = [
    "primitives",
    "contract",
    "keys",
    "node",
]
resolver = "2"

[workspace.package]
version = "1.0.0"

[workspace.dependencies]
borsh = "1.5.3"
cait-sith = { git = "https://github.com/sig-net/cait-sith", rev = "9f34e8c", features = ["k256"] }
serde = { version = "1", features = ["derive"] }

# near dependencies
near-account-id = "1.0.0"
near-sdk = { version = "5.6.0", features = ["legacy", "unit-testing"] }


[patch.crates-io]
# TODO: trigger Cargo.lock update for x25519-dalek once they release.
# This fixes https://rustsec.org/advisories/RUSTSEC-2024-0344 by pointing to a commit that includes the fix.
# This fix has yet to be propagated to crates.io so we will patch it instead.
x25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "5b7082bbc8e0b2106ab0d956064f61fa0f393cdc" }
