[package]
name = "mpc-contract"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.3.0"
near-sdk = "5.0.0-alpha.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

[dev-dependencies]
near-workspaces = "0.10.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.44"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
