[package]
name = "mpc-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.3.0"
near-sdk = {version = "5.0.0", features = ["unstable", "legacy"]}
# near-crypto = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
k256 = { version = "0.13.1", default-features = false, features = ["sha256", "ecdsa", "serde", "arithmetic", "expose-field"] }
# TODO ENSURE THIS ISN'T BUILT INTO THE NODE
getrandom = { version = "0.2.12", features = ["custom"] }
hex = "0.4.3"
# getrandom = { version = "0.2.12" }

# [target.'cfg(target_arch = "wasm")'.dependencies]

[dev-dependencies]
near-workspaces = "0.10.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.44"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
