[package]
name = "mpc-recovery-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aes-gcm = "0.10"
anyhow = { version = "1.0", features = ["backtrace"] }
async-process = "1"
aws-config = "0.54.0"
aws-sdk-s3 = "0.24.0"
aws-types = "0.54.0"
bollard = "0.13"
cait-sith = { git = "https://github.com/LIT-Protocol/cait-sith.git", features = [
    "k256",
] }
clap = { version = "4.2", features = ["derive", "env"] }
curv = { package = "curv-kzen", version = "0.9", default-features = false }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
futures = "0.3"
hex = "0.4.3"
hyper = { version = "0.14", features = ["full"] }
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde"] }
multi-party-eddsa = { git = "https://github.com/DavidM-D/multi-party-eddsa.git", rev = "25ae4fdc5ff7819ae70e73ab4afacf1c24fc4da1" }
tracing = "0.1"
nix = { version = "0.27", features = ["signal"] }
once_cell = "1"
rand = "0.7"
serde = "1"
serde_json = "1"
testcontainers = { version = "0.15", features = ["experimental"] }
tokio = { version = "1.28", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
near-workspaces = { git = "https://github.com/near/near-workspaces-rs.git", branch = "main" }
toml = "0.8.1"
sha2 = "0.10.8"

near-crypto = "0.17"
near-fetch = "0.0.12"
near-jsonrpc-client = "0.6"
near-primitives = "0.17"
near-lake-framework = { git = "https://github.com/near/near-lake-framework-rs.git", branch = "daniyar/upgrade-sdk" }
near-lake-primitives = { git = "https://github.com/near/near-lake-framework-rs.git", branch = "daniyar/upgrade-sdk" }

mpc-contract = { path = "../contract" }
mpc-keys = { path = "../keys" }
mpc-recovery = { path = "../mpc-recovery" }
mpc-recovery-node = { path = "../node" }

[dev-dependencies]
backon = "0.4"
rand = "0.7"
rand8 = { package = "rand", version = "0.8" }
test-log = { version = "0.2.12", features = ["log", "trace"] }
env_logger = "0.10.0"
tracing-log = "0.1.3"
tokio-util = { version = "0.7", features = ["full"] }
reqwest = "0.11.16"

[features]
default = []
docker-test = []
flamegraph = ["mpc-recovery/disable-open-telemetry"]
