[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
anyhow.workspace = true
async-process = "1"
backon = "0.4"
bollard = "0.17.0"
clap.workspace = true
futures = "0.3"
generic-array = { version = "0.14.7", default-features = false }
glob = "0.3.0"
hex.workspace = true
hyper = { version = "0.14", features = ["full"] }
once_cell = "1"
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-escape = "0.1.5"
testcontainers = { version = "0.23.1" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror = "1"
url = { version = "2.4.0", features = ["serde"] }
web3 = "0.19.0"
deadpool-redis = "0.18.0"

# crypto dependencies
ecdsa = "0.16.9"
ethers-core = "2.0.13"
cait-sith = { git = "https://github.com/sig-net/cait-sith", rev = "9f34e8c", features = ["k256"] }
elliptic-curve = { version = "0.13.5", default-features = false }
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde"] }
secp256k1 = "0.28.2"

# near dependencies
near-account-id.workspace = true
near-crypto = "0.26.0"
near-fetch = "0.6.0"
near-sdk.workspace = true
near-jsonrpc-client = "0.13.0"
near-primitives = "0.26.0"
near-workspaces = { git = "https://github.com/near/near-workspaces-rs", branch = "phuong/tmp-node-2.3.0" }

# local chain-signatures dependencies
mpc-crypto.workspace = true
mpc-contract.workspace = true
mpc-keys.workspace = true
mpc-node.workspace = true

[dev-dependencies]
test-log = { version = "0.2.12", features = ["log", "trace"] }

[build-dependencies]
anyhow.workspace = true
async-process = "1"
tokio.workspace = true

[features]
default = []
docker-test = []
