[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
anchor-lang.workspace = true
alloy.workspace = true
anyhow.workspace = true
async-process = "1"
backon = "0.4"
bollard = "0.17.0"
clap.workspace = true
deadpool-redis.workspace = true
futures = "0.3"
generic-array = { version = "0.14.7", default-features = false }
hex.workspace = true
hyper.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-escape = "0.1.5"
testcontainers = "0.23.1"
tokio = { version = "1.45.1", features = ["full", "test-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
url.workspace = true
web3.workspace = true

# crypto dependencies
ecdsa = "0.16.9"
ethers-core = "2.0.13"
cait-sith = { git = "https://github.com/sig-net/cait-sith", rev = "9f34e8c", features = ["k256"] }
elliptic-curve = { version = "0.13.5", default-features = false }
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde"] }
secp256k1 = "0.28.2"

# near dependencies
near-account-id.workspace = true
near-crypto = "0.26.0"
near-fetch = "0.6.0"
near-sdk.workspace = true
near-jsonrpc-client = "0.13.0"
near-primitives = "0.26.0"
near-workspaces = { git = "https://github.com/near/near-workspaces-rs", branch = "phuong/tmp-node-2.3.0" }

# local chain-signatures dependencies
mpc-crypto.workspace = true
mpc-contract.workspace = true
mpc-keys.workspace = true
mpc-node = { path = "../chain-signatures/node", features = ["test-feature"] }
mpc-primitives.workspace = true

[dev-dependencies]
criterion = "0.5.1"
test-log = { version = "0.2.12", features = ["log", "trace"] }

[build-dependencies]
anyhow.workspace = true
async-process = "1"
tokio.workspace = true


[[bench]]
name = "sign"
path = "benches/sign.rs"
harness = false

[[bench]]
name = "store"
path = "benches/store.rs"
harness = false

[features]
default = []
docker-test = []
