[package]
name = "load-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
goose = "^0.17"
goose-eggs = "0.5.1"
tokio = "^1.43.0"
reqwest = "^0.12.12"
near-primitives = "0.28.0"
serde = "1.0.217"
serde_json = "1.0.137"
chrono = "0.4.39"
near-crypto = "0.28.0"
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
near-jsonrpc-client = "0.15.1"
near-fetch = "0.7.0"
web3 = "0.19.0"
borsh = "1.5.5"
near-workspaces = "0.16.0"
