[package]
name = "mpc-recovery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mpc-recovery"
path = "src/main.rs"

# We have encountered issue with linking GMP on ARM macos machines. This is a temporary fix that
# replaces GMP implementation with num-bigint.
# [target.'cfg(macos)'.dependencies]
# curv = { package = "curv-kzen", version = "0.9", default-features = false, features = ["num-bigint"] }
# multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git", default-features = false }

# [target.'cfg(unix)'.dependencies]
# multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git" }

[dependencies]
actix-rt = "2.8"
anyhow = "1"
async-trait = "0.1"
axum = "0.6"
chrono = "0.4.24"
clap = { version = "4.2", features = ["derive"] }
futures = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["http2"] }
jsonwebtoken = "8.3.0"
mpc-recovery-gcp = { path = "../mpc-recovery-gcp" }
oauth2 = "4.3.0"
rand = "0.7"
rand8 = { package = "rand", version = "0.8" }
reqwest = "0.11.16"
rsa = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
threshold_crypto = "0.4.0"
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.9", features = ["tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
