[package]
name = "mpc-recovery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mpc-recovery"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
actix-rt = "2.8"
anyhow = "1"
async-trait = "0.1"
axum = "0.6.19"
axum-extra = "0.7"
borsh = "0.10.3"
chrono = "0.4.24"
clap = { version = "4.2", features = ["derive", "env"] }
futures = "0.3"
google-datastore1 = "5"
google-secretmanager1 = "5"
hex = "0.4.3"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "=0.23", features = ["http2"] }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
oauth2 = "4.3.0"
prometheus = { version = "0.13.3", features = ["process"] }
rand = "0.7"
rand8 = { package = "rand", version = "0.8" }
reqwest = "0.11.16"
rsa = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.28", features = ["full"] }
tokio-retry = "0.3"
tonic = { version = "0.9", features = ["tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
near-jsonrpc-client = "0.6"
near-jsonrpc-primitives = "0.17"
near-primitives = "0.17"
near-crypto = "0.17"
tower-http = { version = "0.4.0", features = ["cors"] }
yup-oauth2 = "8"
multi-party-eddsa = { git = "https://github.com/DavidM-D/multi-party-eddsa.git", rev = "25ae4fdc5ff7819ae70e73ab4afacf1c24fc4da1" }
curv = { package = "curv-kzen", version = "0.9", default-features = false }
ed25519-dalek = {version = "1.0.1", features = ["serde"]}
sha2 = "0.9.9"
