[package]
name = "mpc-recovery-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mpc-recovery-node"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
axum = { version = "0.6.19" }
axum-extra = "0.7"
cait-sith = { git = "https://github.com/LIT-Protocol/cait-sith.git", features = [
    "k256",
] }
clap = { version = "4.2", features = ["derive", "env"] }
hex = "0.4.3"
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde"] }
local-ip-address = "0.5.4"
rand = "0.8"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.28", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.4.0", features = ["serde"] }

near-crypto = "0.17"
near-fetch = "0.0.12"
near-lake-framework = "0.8.0-beta.2"
near-lake-primitives = "0.8.0-beta.2"
near-primitives = "0.17"
near-sdk = "4.1.1"

mpc-contract = { path = "../contract" }
