[package]
name = "mpc-recovery-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mpc-recovery-node"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
aws-config = "0.54.0"
aws-sdk-s3 = "0.24.0"
aws-types = "0.54.0"
axum = { version = "0.6.19" }
axum-extra = "0.7"
cait-sith = { git = "https://github.com/LIT-Protocol/cait-sith.git", features = [
    "k256",
] }
clap = { version = "4.2", features = ["derive", "env"] }
google-secretmanager1 = "5"
hex = "0.4.3"
hkdf = "0.12.4"
highway = "1.1.0"
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde"] }
local-ip-address = "0.5.4"
rand = "0.8"
reqwest = { version = "0.11.16", features = ["json"] }
sha2 = "0.10.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.28", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.4.0", features = ["serde"] }

near-crypto = "0.17"
near-fetch = "0.0.12"
near-lake-framework = { git = "https://github.com/near/near-lake-framework-rs.git", branch = "daniyar/upgrade-sdk" }
near-lake-primitives = { git = "https://github.com/near/near-lake-framework-rs.git", branch = "daniyar/upgrade-sdk" }
near-primitives = "0.17.0"
near-sdk = "5.0.0-alpha.1"

mpc-contract = { path = "../contract" }
mpc-keys = { path = "../keys" }

[dev-dependencies]
itertools = "0.12.0"
