[package]
name = "mpc-contract"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.0"
near-sdk = { version = "=5.1.0", features = ["legacy", "unit-testing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

[dev-dependencies]
near-workspaces = { git = "https://github.com/near/near-workspaces-rs.git", branch = "feat/upgrade-near-deps" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.44"
