[package]
name = "mpc-contract"
version = "1.0.0-rc.5"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.3"
near-sdk = { version = "5.6.0", features = ["legacy", "unit-testing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde", "arithmetic", "expose-field"] }
crypto-shared = { path = "../crypto-shared" }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

# crypto dependencies
ecdsa = { version = "0.16.9", features = ["digest", "hazmat"] }
signature = "2.2.0"
digest = "0.10.7"

# near dependencies
near-crypto = "0.27.0"
near-workspaces = "0.15.0"