[package]
name = "mpc-contract"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
k256.workspace = true
mpc-crypto.workspace = true
mpc-primitives.workspace = true
near-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
rand.workspace = true
tokio.workspace = true

# crypto dependencies
ecdsa = { version = "0.16.9", features = ["digest", "hazmat"] }
signature = "2.2.0"
digest = "0.10.7"

# near dependencies
near-crypto = "0.27.0"
near-workspaces = "0.15.0"

[features]
default = []
# utilized for benchmarking the node:
bench = []
