[package]
name = "crypto-shared"
version.workspace = true
edition = "2021"

[dependencies]
k256 = { version = "0.13.1", features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }
anyhow = "1"
serde.workspace = true
borsh.workspace = true
near-account-id = "1"
serde_json = "1"
near-sdk.workspace = true
sha3 = "0.10.8"
subtle = "2.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["custom"] }

[dev-dependencies]
