[package]
name = "mpc-keys"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
hex = "0.4.3"
hpke = { version = "0.11", features = ["serde_impls", "std"] }
serde.workspace = true
rand = { version = "0.8" }

[dev-dependencies]
hex = "*"
