[package]
name = "mpc-keys"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
borsh.workspace = true
hex.workspace = true
hpke = { version = "0.11", features = ["serde_impls", "std"] }
serde.workspace = true
rand.workspace = true
