[package]
name = "mpc-node"
version.workspace = true
edition = "2021"

[[bin]]
name = "mpc-node"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
aws-config = "1.4"
aws-sdk-s3 = "1.29"
axum = "0.6.19"
axum-extra = "0.7"
chrono = "0.4.24"
google-datastore1 = "=5.0.4"
google-secretmanager1 = "5"
hkdf = "0.12.4"
highway = "1.1.0"
http = "1.1.0"
hyper-rustls = { version = "=0.24", features = ["http2"] }
local-ip-address = "0.5.4"
lru = "0.13.0"
prometheus = "0.13.3"
redis = "0.27.2"
semver = "1.0.23"
sysinfo = "0.32.0"
tokio-retry = "0.3.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing-stackdriver = "0.10.0"

# workspace dependencies
anyhow.workspace = true
borsh.workspace = true
cait-sith.workspace = true
ciborium.workspace = true
clap.workspace = true
deadpool-redis.workspace = true
hex.workspace = true
hyper.workspace = true
k256.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
web3.workspace = true

near-account-id.workspace = true
near-crypto = "0.26.0"
near-fetch = "0.6.0"
near-lake-framework = { git = "https://github.com/near/near-lake-framework-rs", branch = "node/2.3.0" }
near-lake-primitives = { git = "https://github.com/near/near-lake-framework-rs", branch = "node/2.3.0" }
near-primitives.workspace = true
near-sdk.workspace = true

mpc-contract.workspace = true
mpc-crypto.workspace = true
mpc-keys.workspace = true
mpc-primitives.workspace = true

[dev-dependencies]
mockito = "1.7.0"
test-log = { version = "0.2.12", features = ["log", "trace"] }

[features]
default = []
# utilized for benchmarking the node:
bench = []
