[package]
name = "mpc-node"
version.workspace = true
edition = "2021"

[[bin]]
name = "mpc-node"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
atty = "0.2"
aws-config = "1.4"
aws-sdk-s3 = "1.29"
axum = "0.7.9"
axum-extra = "0.9.6"
chrono = "0.4.24"
google-datastore1 = "=5.0.4"
google-secretmanager1 = "5"
hkdf = "0.12.4"
highway = "1.1.0"
http = "1.1.0"
hyper-rustls = { version = "=0.24", features = ["http2"] }
local-ip-address = "0.5.4"
lru = "0.13.0"
mime = "0.3.17"
prometheus = "0.14.0"
redis = "0.27.2"
semver = "1.0.23"
sysinfo = "0.32.0"
tokio-retry = "0.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing-appender = "0.2.2"
tracing-stackdriver = "0.10.0"
tracing-opentelemetry = "0.30.0"
opentelemetry = { version = "0.29.0", default-features = false, features = [
    "trace",
] }
opentelemetry-otlp = { version = "0.29.0" }
opentelemetry_sdk = { version = "0.29.0", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-appender-tracing = "0.29.1"
alloy-signer-local = "1.0.9"
alloy-sol-types = "1.2.0"
helios = { git = "https://github.com/sig-net/helios", rev = "a0e50e11066f999c393f58271cb255ace2a6c179" }

# workspace dependencies
alloy.workspace = true
anyhow.workspace = true
borsh.workspace = true
borsh_sol = { package = "borsh", version = "0.10.4" } # solana anchor requires borsh 0.10
cait-sith.workspace = true
ciborium.workspace = true
clap.workspace = true
deadpool-redis.workspace = true
hex.workspace = true
hyper.workspace = true
k256.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
web3.workspace = true
anchor-client.workspace = true
anchor-lang.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-client = "2.2.7"
futures-util = "0.3.31"

near-account-id.workspace = true
near-crypto = "0.26.0"
near-fetch = "0.6.0"
near-lake-framework = { git = "https://github.com/near/near-lake-framework-rs", branch = "node/2.3.0" }
near-lake-primitives = { git = "https://github.com/near/near-lake-framework-rs", branch = "node/2.3.0" }
near-primitives.workspace = true
near-sdk.workspace = true

mpc-contract.workspace = true
mpc-crypto.workspace = true
mpc-keys.workspace = true
mpc-primitives.workspace = true
signet-program.workspace = true

[dev-dependencies]
mockito = "1.7.0"
test-log = { version = "0.2.12", features = ["log", "trace"] }

[features]
default = []
# utilized for benchmarking the node:
bench = []
# utilized by "integration-tests" package:
test-feature = []
