[package]
name = "mpc-primitives"
version.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
borsh.workspace = true
k256.workspace = true
near-account-id.workspace = true
near-sdk.workspace = true
serde.workspace = true

mpc-crypto.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["custom"] }
